--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-023YYLN0C9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-023YYLN0C9');
+</script>
 </head>
 <body>
     <header class="container" id="header">
@@ -52,7 +61,7 @@
             </div>
         </div>
     </section>
-    <section class="section container">
+ <!--    <section class="section container">
         <div class="block-content">
             <h1 class=" js-scroll fade-in-up">With all the features you need</h1>
             <p class="js-scroll fade-in-up">Nisi dignissim tortor sed quam sed ipsum ut. Montes, morbi euismod elit est. Eget luctus vestibulum</p>
@@ -207,7 +216,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <footer class="container">
         <div class="section-footer maxsize">
             <div class="office js-scroll fade-in-up">
