--- a/index.html
+++ b/index.html
@@ -1,67 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Neurobica</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
+    <link rel="stylesheet" href="style.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-023YYLN0C9"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-023YYLN0C9"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-023YYLN0C9');
-</script>
-</head>
-<body>
+      gtag("config", "G-023YYLN0C9");
+    </script>
+  </head>
+  <body>
     <header class="container" id="header">
-        <div class="navbar maxsize">
-            <div class="logo"><img src="LogoPNG.png" alt="Logo" width="66" height="44"></div>
-            <div id="menu-icon"><span class="bars"><i class="fas fa-bars"></i></span><span class="cross"><i class="fas fa-times"></i></span></div>
-            <div class="menu full">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Platform</a></li>
-                    <li><a href="#">Supplements</a></li>
-                    <li><a href="#">Team</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div class="join-btns">
-                <div class="login"><a href="#">Log in</a></div>
-                <div class="signup"><a href="#">Sign up</a></div>
-            </div>
+      <div class="navbar maxsize">
+        <div class="logo">
+          <img src="LogoPNG.png" alt="Logo" width="66" height="44" />
         </div>
+        <div id="menu-icon">
+          <span class="bars"><i class="fas fa-bars"></i></span
+          ><span class="cross"><i class="fas fa-times"></i></span>
+        </div>
+        <div class="menu full">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Platform</a></li>
+            <li><a href="">Supplements</a></li>
+            <li><a href="">Team</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </div>
+        <div class="join-btns">
+          <div class="login"><a href="">Log in</a></div>
+          <div class="signup"><a href="">Sign up</a></div>
+        </div>
+      </div>
     </header>
     <section class="section-hero container">
-        <div class="content maxsize">
-            <div class="block-content">
-                <h1>We bring together everything that’s required to <span class="diff-bold">Train your Brain</span></h1>
-                <p>We create accessible brain healthcare routine</p>
-                <a href="#" class="btn">Get Started</a>
-            </div>
-            <div class="block-hero-img">
-                <img src="Images/document.svg" alt="" id="doc1" class="doc-box-shadow">
-                <div id="doc2"><img src="Images/document2.svg" alt="" class="circle doc-box-shadow"></div>
-                <div id="circle1" class="circle slide-left"><img src="Images/red circle.png" alt=""></div>
-                <div id="circle2" class="circle slide-right"><img src="Images/red circle.png" alt=""></div>
-                <div id="circle3" class="circle slide-right"><img src="Images/transparent circle.png" alt=""></div>
-                <div id="circle4" class="circle slide-right"><img src="Images/red circle.png" alt=""></div>
-                <div id="circle5" class="circle slide-left"><img src="Images/transparent circle.png" alt=""></div>
-                <div id="circle6" class="circle slide-right"><img src="Images/transparent circle.png" alt=""></div>
-                <div id="circle7" class="circle slide-left"><img src="Images/red circle.png" alt=""></div>
-                <div id="circle8" class="circle slide-right"><img src="Images/transparent circle.png" alt=""></div>
-                <div id="circle9" class="circle slide-left"><img src="Images/transparent circle.png" alt=""></div>
-            </div>
+      <div class="content maxsize">
+        <div class="block-content">
+          <h1>
+            We bring together everything that’s required to
+            <span class="diff-bold">Train your Brain</span>
+          </h1>
+          <p>We create accessible brain healthcare routine</p>
+          <a href="" class="btn">Get Started</a>
         </div>
+      </div>
     </section>
- <!--    <section class="section container">
+    <!--    <section class="section container">
         <div class="block-content">
             <h1 class=" js-scroll fade-in-up">With all the features you need</h1>
             <p class="js-scroll fade-in-up">Nisi dignissim tortor sed quam sed ipsum ut. Montes, morbi euismod elit est. Eget luctus vestibulum</p>
@@ -144,7 +141,7 @@
                     <div class="feat-p js-scroll fade-in-up"><p>Egestas dictumst facilisis vulputate cras tellus sit.</p></div>
                 </div>
             </div>
-            <a href="#" class="btn js-scroll fade-in-up">Get Started</a>
+            <a href="" class="btn js-scroll fade-in-up">Get Started</a>
         </div>
     </section>
     <section class="section container">
@@ -166,7 +163,7 @@
             <div class="section-content review-content js-scroll fade-in-up">
                 <h1>What clients say about us</h1>
                 <p>Turpis ut mattis consectetur a sapien tempus, commodo etiam. Tincidunt mauris ultrices non sit.</p>
-                <a href="#" class="btn">About Us</a>
+                <a href="" class="btn">About Us</a>
             </div>
             <div class="reviewcontain1  js-scroll fade-in-up">
                 <div class="review1 review  js-scroll fade-in-up">
@@ -218,41 +215,26 @@
         </div>
     </section> -->
     <footer class="container">
-        <div class="section-footer maxsize">
-            <div class="office js-scroll fade-in-up">
-                <div class="logo">LOGO</div>
-                <div class="address js-scroll fade-in-up"><span>Our office:</span> <br>
-                    asdasd asd asd as d <br>
-                   a sda sda s
-                </div>
-            </div>
-            <div class="quick footerlinks js-scroll fade-in-up">
-                <h4>Quick Links</h4>
-                <li><a href="#">Company</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Blog</a></li>
-            </div>
-            <div class="social footerlinks js-scroll fade-in-up">
-                <h4>Social</h4>
-
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Youtube</a></li>
-                
-            </div>
-            <div class="template footerlinks js-scroll fade-in-up">
-                <h4>Template</h4>
-
-                <li><a href="#">Instructions</a></li>
-                <li><a href="#">Licensing</a></li>
-                <li><a href="#">Style Guide</a></li>
-                <li><a href="#">Changelog</a></li>
-
-            </div>
+      <div class="section-footer maxsize">
+        <div class="office js-scroll fade-in-up"></div>
+        <div class="quick footerlinks js-scroll fade-in-up">
+          <h4>Quick Links</h4>
+          <li><a href="">Company</a></li>
+          <li><a href="">Features</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Blog</a></li>
         </div>
+        <div class="social footerlinks js-scroll fade-in-up">
+          <h4>Social</h4>
+
+          <li>
+            <a href="https://www.facebook.com/Neurobica-112506341478110"
+              >Facebook</a
+            >
+          </li>
+        </div>
+      </div>
     </footer>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
