--- a/index.html
+++ b/index.html
@@ -23,43 +23,46 @@
     </script>
   </head>
   <body>
-    <header class="container" id="header">
-      <div class="navbar maxsize">
-        <div class="logo">
-          <img src="LogoPNG.png" alt="Logo" width="66" height="44" />
+    <div class="site">
+      <div class="commingSoon">kjgknmb</div>
+
+      <header class="container" id="header">
+        <div class="navbar maxsize">
+          <div class="logo">
+            <img src="LogoPNG.png" alt="Logo" width="66" height="44" />
+          </div>
+          <div id="menu-icon">
+            <span class="bars"><i class="fas fa-bars"></i></span
+            ><span class="cross"><i class="fas fa-times"></i></span>
+          </div>
+          <div class="menu full">
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">Platform</a></li>
+              <li><a href="">Supplements</a></li>
+              <li><a href="">Team</a></li>
+              <li><a href="">Contact</a></li>
+            </ul>
+          </div>
+          <div class="join-btns">
+            <div class="login"><a href="">Log in</a></div>
+            <div class="signup"><a href="">Sign up</a></div>
+          </div>
         </div>
-        <div id="menu-icon">
-          <span class="bars"><i class="fas fa-bars"></i></span
-          ><span class="cross"><i class="fas fa-times"></i></span>
+      </header>
+      <section class="section-hero container">
+        <div class="content maxsize">
+          <div class="block-content">
+            <h1>
+              We bring together everything that’s required to
+              <span class="diff-bold">Train your Brain</span>
+            </h1>
+            <p>We create accessible brain healthcare routine</p>
+            <a href="" class="btn">Get Started</a>
+          </div>
         </div>
-        <div class="menu full">
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Platform</a></li>
-            <li><a href="">Supplements</a></li>
-            <li><a href="">Team</a></li>
-            <li><a href="">Contact</a></li>
-          </ul>
-        </div>
-        <div class="join-btns">
-          <div class="login"><a href="">Log in</a></div>
-          <div class="signup"><a href="">Sign up</a></div>
-        </div>
-      </div>
-    </header>
-    <section class="section-hero container">
-      <div class="content maxsize">
-        <div class="block-content">
-          <h1>
-            We bring together everything that’s required to
-            <span class="diff-bold">Train your Brain</span>
-          </h1>
-          <p>We create accessible brain healthcare routine</p>
-          <a href="" class="btn">Get Started</a>
-        </div>
-      </div>
-    </section>
-    <!--    <section class="section container">
+      </section>
+      <!--    <section class="section container">
         <div class="block-content">
             <h1 class=" js-scroll fade-in-up">With all the features you need</h1>
             <p class="js-scroll fade-in-up">Nisi dignissim tortor sed quam sed ipsum ut. Montes, morbi euismod elit est. Eget luctus vestibulum</p>
@@ -215,27 +218,28 @@
             </div>
         </div>
     </section> -->
-    <footer class="container">
-      <div class="section-footer maxsize">
-        <div class="office js-scroll fade-in-up"></div>
-        <div class="quick footerlinks js-scroll fade-in-up">
-          <h4>Quick Links</h4>
-          <li><a href="">Company</a></li>
-          <li><a href="">Features</a></li>
-          <li><a href="">Contact</a></li>
-          <li><a href="">Blog</a></li>
-        </div>
-        <div class="social footerlinks js-scroll fade-in-up">
-          <h4>Social</h4>
+      <footer class="container">
+        <div class="section-footer maxsize">
+          <div class="office js-scroll fade-in-up"></div>
+          <div class="quick footerlinks js-scroll fade-in-up">
+            <h4>Quick Links</h4>
+            <li><a href="">Company</a></li>
+            <li><a href="">Features</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Blog</a></li>
+          </div>
+          <div class="social footerlinks js-scroll fade-in-up">
+            <h4>Social</h4>
 
-          <li>
-            <a href="https://www.facebook.com/Neurobica-112506341478110"
-              >Facebook</a
-            >
-          </li>
+            <li>
+              <a href="https://www.facebook.com/Neurobica-112506341478110"
+                >Facebook</a
+              >
+            </li>
+          </div>
         </div>
-      </div>
-    </footer>
-    <script src="script.js"></script>
+      </footer>
+      <script src="script.js"></script>
+    </div>
   </body>
 </html>
