--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
   </head>
   <body>
     <div class="site">
-      <div class="commingSoon">kjgknmb</div>
+      <div class="commingSoon">
+        <div class="cslogo">logo</div>
+        <div class="csh1">Our New Website Is Commin Soon!</div>
+        <div class="csh2">h2</div>
+        <div class="cscountdown">countdown</div>
+      </div>
 
       <header class="container" id="header">
         <div class="navbar maxsize">
