--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   <body>
     <div class="site">
       <div class="commingSoon">
-        <div class="cslogo">logo</div>
+        <div class="cslogo"><img class="thelogo" src="./logo512.png" /></div>
         <div class="csh1">Our New Website Is Commin Soon!</div>
-        <div class="csh2">h2</div>
-        <div class="cscountdown">countdown</div>
+        <div class="csh2">Stay tuned</div>
+        <div class="cscountdown"></div>
       </div>
 
       <header class="container" id="header">
