--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Neurobica
-    </title>
+    <title>Neurobica</title>
     <link
       rel="shortcut icon"
       href="assets/images/favicon.png"
@@ -31,7 +29,7 @@
           <div class="w-60 max-w-full px-4">
             <a href="index.html" class="navbar-logo block w-full py-5">
               <img
-                src="assets/images/logo/logo-white.svg"
+                src="assets/images/logo/logo-white.png"
                 alt="logo"
                 class="header-logo w-full"
               />
@@ -60,27 +58,75 @@
                 <ul class="blcok lg:flex">
                   <li class="group relative">
                     <a
-                      href="#home"
+                      href="#mission"
                       class="ud-menu-scroll mx-8 flex py-2 text-base text-dark group-hover:text-primary lg:mr-0 lg:inline-flex lg:py-6 lg:px-0 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70"
                     >
-                      Home
+                      Mission Statement
                     </a>
                   </li>
                   <li class="group relative">
                     <a
-                      href="#about"
+                      href="#pands"
                       class="ud-menu-scroll mx-8 flex py-2 text-base text-dark group-hover:text-primary lg:mr-0 lg:ml-7 lg:inline-flex lg:py-6 lg:px-0 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-12"
                     >
-                      About
+                      Problem and Solution
                     </a>
                   </li>
                   <li class="group relative">
                     <a
-                      href="#pricing"
+                      href="#value"
                       class="ud-menu-scroll mx-8 flex py-2 text-base text-dark group-hover:text-primary lg:mr-0 lg:ml-7 lg:inline-flex lg:py-6 lg:px-0 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-12"
                     >
-                      Pricing
+                      Unique Value Proposition
                     </a>
+                  </li>
+                  <li class="submenu-item group relative">
+                    <a
+                      href="javascript:void(0)"
+                      class="relative mx-8 flex py-2 text-base text-dark after:absolute after:right-1 after:top-1/2 after:mt-[-2px] after:h-2 after:w-2 after:-translate-y-1/2 after:rotate-45 after:border-b-2 after:border-r-2 after:border-current group-hover:text-primary lg:mr-0 lg:ml-8 lg:inline-flex lg:py-6 lg:pl-0 lg:pr-4 lg:text-white lg:after:right-0 lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-12"
+                    >
+                      Features
+                    </a>
+                    <div
+                      class="submenu relative top-full left-0 hidden w-[250px] rounded-sm bg-white p-4 transition-[top] duration-300 group-hover:opacity-100 lg:invisible lg:absolute lg:top-[110%] lg:block lg:opacity-0 lg:shadow-lg lg:group-hover:visible lg:group-hover:top-full"
+                    >
+                      <a
+                        href="panda.html"
+                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
+                      >
+                        Personalized & Accessible
+                      </a>
+                      <a
+                        href="pricing.html"
+                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
+                      >
+                        Multiplayer & Community
+                      </a>
+                      <a
+                        href="contact.html"
+                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
+                      >
+                        Attention & focus
+                      </a>
+                      <a
+                        href="blog-grids.html"
+                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
+                      >
+                        Anxiety & stress relief
+                      </a>
+                      <a
+                        href="blog-details.html"
+                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
+                      >
+                        Meditation & mindfulness
+                      </a>
+                      <a
+                        href="signup.html"
+                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
+                      >
+                        Memory & IQ boost
+                      </a>
+                    </div>
                   </li>
                   <li class="group relative">
                     <a
@@ -90,6 +136,7 @@
                       Team
                     </a>
                   </li>
+
                   <li class="group relative">
                     <a
                       href="#contact"
@@ -98,81 +145,15 @@
                       Contact
                     </a>
                   </li>
-                  <li class="submenu-item group relative">
-                    <a
-                      href="javascript:void(0)"
-                      class="relative mx-8 flex py-2 text-base text-dark after:absolute after:right-1 after:top-1/2 after:mt-[-2px] after:h-2 after:w-2 after:-translate-y-1/2 after:rotate-45 after:border-b-2 after:border-r-2 after:border-current group-hover:text-primary lg:mr-0 lg:ml-8 lg:inline-flex lg:py-6 lg:pl-0 lg:pr-4 lg:text-white lg:after:right-0 lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-12"
-                    >
-                      Pages
-                    </a>
-                    <div
-                      class="submenu relative top-full left-0 hidden w-[250px] rounded-sm bg-white p-4 transition-[top] duration-300 group-hover:opacity-100 lg:invisible lg:absolute lg:top-[110%] lg:block lg:opacity-0 lg:shadow-lg lg:group-hover:visible lg:group-hover:top-full"
-                    >
-                      <a
-                        href="about.html"
-                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
-                      >
-                        About Page
-                      </a>
-                      <a
-                        href="pricing.html"
-                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
-                      >
-                        Pricing Page
-                      </a>
-                      <a
-                        href="contact.html"
-                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
-                      >
-                        Contact Page
-                      </a>
-                      <a
-                        href="blog-grids.html"
-                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
-                      >
-                        Blog Grid Page
-                      </a>
-                      <a
-                        href="blog-details.html"
-                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
-                      >
-                        Blog Details Page
-                      </a>
-                      <a
-                        href="signup.html"
-                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
-                      >
-                        Sign Up Page
-                      </a>
-                      <a
-                        href="signin.html"
-                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
-                      >
-                        Sign In Page
-                      </a>
-                      <a
-                        href="404.html"
-                        class="block rounded py-[10px] px-4 text-sm text-body-color hover:text-primary"
-                      >
-                        404 Page
-                      </a>
-                    </div>
-                  </li>
                 </ul>
               </nav>
             </div>
             <div class="hidden justify-end pr-16 sm:flex lg:pr-0">
               <a
-                href="signin.html"
-                class="loginBtn py-3 px-7 text-base font-medium text-white hover:opacity-70"
-              >
-                Sign In
-              </a>
-              <a
                 href="signup.html"
                 class="signUpBtn rounded-lg bg-white bg-opacity-20 py-3 px-6 text-base font-medium text-white duration-300 ease-in-out hover:bg-opacity-100 hover:text-dark"
               >
-                Sign Up
+                Auth?
               </a>
             </div>
           </div>
@@ -196,30 +177,36 @@
               <h1
                 class="mb-8 text-3xl font-bold leading-snug text-white sm:text-4xl sm:leading-snug md:text-[45px] md:leading-snug"
               >
-                Open-Source Web Template for SaaS, Startup, Apps, and More
+                Neurobica creates a world where everyone has the power to change
+                their minds
               </h1>
               <p
                 class="mx-auto mb-10 max-w-[600px] text-base text-[#e4e4e4] sm:text-lg sm:leading-relaxed md:text-xl md:leading-relaxed"
               >
-                Multidisciplinary Web Template Built with Your Favourite
-                Technology - HTML Bootstrap, Tailwind and React NextJS.
+                We offer <b>Personalized</b> neurofeedback training,
+                <br />
+                that <b>anyone can afford</b>,
+                <br />
+                use <b>anywhere</b>, at <b>anytime</b>,
+                <br />
+                <b>without risk</b> and with maximum results
               </p>
               <ul class="mb-10 flex flex-wrap items-center justify-center">
                 <li>
                   <a
-                    href="https://links.tailgrids.com/play-download"
+                    href="neurobica.online"
                     class="inline-flex items-center justify-center rounded-lg bg-white py-4 px-6 text-center text-base font-medium text-dark transition duration-300 ease-in-out hover:text-primary hover:shadow-lg sm:px-10"
                   >
-                    Download Now
+                    call to action 1?
                   </a>
                 </li>
                 <li>
                   <a
-                    href="https://github.com/tailgrids/play-tailwind"
+                    href="neurobica.online"
                     target="_blank"
                     class="flex items-center py-4 px-6 text-base font-medium text-white transition duration-300 ease-in-out hover:opacity-70 sm:px-10"
                   >
-                    Star on Github
+                    call to action 2
                     <span class="pl-2">
                       <svg
                         width="20"
@@ -235,13 +222,13 @@
                   </a>
                 </li>
               </ul>
-              <div class="wow fadeInUp text-center" data-wow-delay=".3s">
+              <!--  <div class="wow fadeInUp text-center" data-wow-delay=".3s">
                 <img
                   src="assets/images/hero/brand.svg"
                   alt="image"
                   class="mx-auto w-full max-w-[250px] opacity-50 transition duration-300 ease-in-out hover:opacity-100"
                 />
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -252,7 +239,7 @@
             >
               <div class="mt-16">
                 <img
-                  src="assets/images/hero/hero-image.jpg"
+                  src="assets/images/hero/hero-image.png"
                   alt="hero"
                   class="mx-auto max-w-full rounded-t-xl rounded-tr-xl"
                 />
@@ -1416,13 +1403,15 @@
               <h2
                 class="mb-4 text-3xl font-bold text-dark sm:text-4xl md:text-[42px]"
               >
-                Main Features Of Play
+                Main Features of Neurobica Platform
               </h2>
               <p
                 class="text-lg leading-relaxed text-body-color sm:text-xl sm:leading-relaxed"
               >
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
+                In Our platfrom you can find a goal-oriented and personalized
+                training program, based on a diagnostic questionnaire,
+                cognitive/brain function test and brain activity analysis using
+                AI algorithm
               </p>
             </div>
           </div>
@@ -1450,10 +1439,12 @@
                 </svg>
               </div>
               <h4 class="mb-3 text-xl font-bold text-dark">
-                Free and Open-Source
+                Representation of brain activity
               </h4>
               <p class="mb-8 text-body-color lg:mb-11">
-                Lorem Ipsum is simply dummy text of the printing and industry.
+                the app background will change according to the user’s brain
+                waves. The user’s real time brain activity will also be shown as
+                raw data or different brain waves.
               </p>
               <a
                 href="javascript:void(0)"
@@ -1487,11 +1478,11 @@
                   />
                 </svg>
               </div>
-              <h4 class="mb-3 text-xl font-bold text-dark">
-                Multipurpose Template
-              </h4>
+              <h4 class="mb-3 text-xl font-bold text-dark">Daily tips</h4>
               <p class="mb-8 text-body-color lg:mb-11">
-                Lorem Ipsum is simply dummy text of the printing and industry.
+                A daily tip for maintaining brain – the app will provide daily
+                tips for maintaining a healthy brain/improving cognitive
+                functions.
               </p>
               <a
                 href="javascript:void(0)"
@@ -4665,7 +4656,7 @@
                 class="mb-6 inline-block max-w-[160px]"
               >
                 <img
-                  src="assets/images/logo/logo-white.svg"
+                  src="assets/images/logo/logo-white.png"
                   alt="logo"
                   class="max-w-full"
                 />
